Fix checkbox margins in right-aligned table cells

--- a/src/inc/cleanup.less
+++ b/src/inc/cleanup.less
@@ -14,7 +14,6 @@ table, caption, tbody, tfoot, thead, tr, th, td {
     outline: 0;
     border: none;
     background: transparent;
-    text-align: left;
     font-size: 10pt;
     font-weight: normal;
 }
