--- a/src/inc/tables.less
+++ b/src/inc/tables.less
@@ -17,6 +17,13 @@ th, td {
     padding: 4px 10px;
 }
 
+th[style="text-align: right;"], td[align="right"] {
+    input[type="checkbox"], input[type="radio"] {
+        margin-right: 0;
+        margin-left: 5px;
+    }
+}
+
 thead td, thead th, .odd td, tbody tr:hover td, tbody tr:hover th,
 .js .checkable .checked td, .js .checkable .checked th {
     background: transparent;
